2015-03-09  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Build with the home-grown spell checker

	* src/spell-check.c (balsa_spell_check_init): put button grid in
	the content-area, now that accessing the action-area is
	deprecated.

2015-03-09  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/balsa-icons.c (balsa_register_pixbufs): use
	freedesktop.org standard window-close icon instead of gtk-close
	<http://standards.freedesktop.org/icon-naming-spec/latest/>

2015-03-04  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Respect the "All headers" option on the "View" menu (Helmut
	Jarausch,
	<https://mail.gnome.org/archives/balsa-list/2015-March/msg00001.html>)

	* src/balsa-mime-widget-message.c
	(balsa_mime_widget_message_set_headers),
	(balsa_mime_widget_message_set_headers_d): set the
	show-all-headers parameter correctly.

2015-03-03  Albrecht Dreß

	Improve printing of text/rfc822-headers parts

	* src/balsa-print-object-header.c
	(balsa_print_object_header_new_real),
	(balsa_print_object_header_from_message),
	(balsa_print_object_header_from_body), (header_add_string),
	(header_add_list): implement and respect new parameter gboolean
	print_all_headers.

2015-03-02  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Remove unnecessary parameter

	* src/balsa-mime-widget-message.c (add_header_gchar),
	(add_header_address_list), (bmw_message_set_headers_d): we do
	not need to pass the BalsaMessage.

2015-03-02  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Show all headers in a text/rfc822-headers part

	* src/balsa-mime-widget-message.c (add_header_gchar): new
	parameter gboolean show_all_headers;
	(balsa_mime_widget_new_message),
	(add_header_address_list),
	(bmw_message_set_headers_d), (bmw_message_set_headers),
	(balsa_mime_widget_message_set_headers),
	(balsa_mime_widget_message_set_headers_d): use it.

2015-03-02  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Provide a parent window for the send-progress dialog
